# honeycomb

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  test_config_check.sh  test_improvements.sh
.github/workflows/: ci.yml
apps/hc/: Cargo.toml
apps/hc-agent-cli/: Cargo.toml
apps/hc-agent-cli/src/: chat.rs  cli.rs  lib.rs  main.rs
apps/hc-api/: Cargo.toml
apps/hc-api/src/: lib.rs  main.rs  run.rs
apps/hc-api/src/run/: mod.rs
apps/hc-api/src/run/behavior/: mod.rs
apps/hc-api/src/run/memory/: mod.rs
apps/hc-api/src/run/openapi/: mod.rs
apps/hc-api/tests/: smoke.rs
apps/hc-careos-mcp/: Cargo.toml
apps/hc-careos-mcp/src/: main.rs
apps/hc-cli/: Cargo.toml
apps/hc-cli/src/: lib.rs  main.rs
apps/hc-cli/src/app/: mod.rs
apps/hc-cli/src/app/cli/: mcp.rs  mod.rs  pattern.rs  room.rs  schedule.rs  workspace_index.rs
apps/hc-cli/tests/unit/: cli.rs
apps/hc-context-cli/: Cargo.toml
apps/hc-context-cli/src/: main.rs
apps/hc-context-cli/tests/unit/: cli.rs
apps/hc-llm-cli/: Cargo.toml
apps/hc-llm-cli/src/: main.rs
apps/hc-responder-cli/: Cargo.toml
apps/hc-tool-cli/: Cargo.toml
apps/hc-tool-cli/src/: main.rs
apps/hc-tool-cli/tests/unit/: cli.rs
crates/agent/hc-agent/: Cargo.toml
crates/agent/hc-agent/src/: agent_chat_turn_sink.rs  binding.rs  bootstrap.rs  catalog.rs  conversation.rs  domain.rs  experience_lane.rs  http_l2l3_planner_steering.rs  lib.rs  orchestrator.rs  profile.rs  routing.rs  runtime_layout.rs  session_bundle.rs  session_hc_agent_bin.rs  swarm_routing.rs  task.rs  workbench.rs
crates/agent/hc-agent/tests/unit/: incubation.rs  orchestrator.rs  persistence.rs  planning.rs  workbench.rs
crates/agent/hc-context/: Cargo.toml
crates/agent/hc-context/prompt-templates/agent/: planner-input.md  work-item-execution.md
crates/agent/hc-context/prompt-templates/extract/: semantic-tags.md
crates/agent/hc-context/prompt-templates/organizer/: memory-organizer.md
crates/agent/hc-context/prompt-templates/summarize/: global-preference-summary.md
crates/agent/hc-context/prompt-templates/synthesis/: prompt-asset-synthesizer.md
crates/agent/hc-context/prompt-templates/system/: json-guard.md
crates/agent/hc-context/prompt-templates/tool/: tool-router.md
crates/agent/hc-context/src/: lib.rs  runtime.rs
crates/agent/hc-context/tests/unit/: lib.rs
crates/agent/hc-responder/: Cargo.toml
crates/agent/hc-responder/tests/unit/: lib.rs
crates/agent/hc-scheduler/: Cargo.toml
crates/agent/hc-scheduler/src/: lib.rs
crates/agent/hc-skill/: Cargo.toml
crates/foundation/hc-tag-system/: Cargo.toml
crates/foundation/hc-tag-system/examples/: test_system.rs
crates/foundation/hc-tag-system/src/: dynamic_learning.rs  explainable.rs  fuzzy_matcher.rs  hierarchical_intent.rs  performance.rs  personalization.rs
crates/hc-agent/: Cargo.toml
crates/hc-agent/src/: binding.rs  bootstrap.rs  conversation.rs  domain.rs  incubation.rs  lib.rs  orchestrator.rs  persistence.rs  planning.rs  profile.rs  routing.rs  swarm_routing_phrase_table.rs  task.rs  view.rs  workbench.rs
crates/hc-agent/tests/unit/: bootstrap.rs  conversation.rs  orchestrator.rs  persistence.rs  planning.rs  view.rs
crates/hc-behavior/: Cargo.toml
crates/hc-behavior/src/: lib.rs
crates/hc-bootstrap/: Cargo.toml
crates/hc-bootstrap/src/: lib.rs
crates/hc-context/: Cargo.toml
crates/hc-conversation/: Cargo.toml
crates/hc-conversation/src/: lib.rs
crates/hc-core/: Cargo.toml
crates/hc-llm/: Cargo.toml
crates/hc-llm/src/: lib.rs
crates/hc-log/: Cargo.toml
crates/hc-memory/: Cargo.toml
crates/hc-memory/src/: lib.rs
crates/hc-memory/tests/: memory_flow.rs
crates/hc-persona/: Cargo.toml
crates/hc-protocol/: Cargo.toml
crates/hc-responder/: Cargo.toml
crates/hc-scheduler/: Cargo.toml
crates/hc-service/: Cargo.toml
crates/hc-service/src/: agent.rs  chat.rs  conversation.rs  index.rs  lib.rs  scheduler.rs  session_swarm_state.rs  timed_turn.rs  tool.rs  tool_execution.rs  tool_turn.rs  transport.rs  turn.rs
crates/hc-skill/: Cargo.toml
crates/hc-store/: Cargo.toml
crates/hc-tag-system/: Cargo.toml
crates/hc-tag-system/examples/: test_system.rs
crates/hc-tag-system/src/: ab_testing.rs  context.rs  dynamic_learning.rs  explainable.rs  fuzzy_matcher.rs  hierarchical_intent.rs  lib.rs  multimodal.rs  multipath.rs  performance.rs  personalization.rs  reinforcement_learning.rs  vector_matching.rs
crates/hc-toolchain/: Cargo.toml
crates/hc-toolchain/src/: lib.rs
crates/hc-toolchain/tests/unit/: lib.rs
crates/hc-trace/: Cargo.toml
crates/hc-trace/src/: lib.rs
crates/hc-trace/tests/unit/: lib.rs
crates/hc-ui/: Cargo.toml
crates/hc-ui/src/: lib.rs  main.rs
crates/integrations/hc-trace/: Cargo.toml
crates/integrations/hc-trace/src/: lib.rs
crates/runtime/hc-service/: Cargo.toml
crates/runtime/hc-service/src/: agent.rs  human_inbox.rs  room_routing.rs  session_swarm_state.rs  timed_turn.rs  tool_turn.rs  turn.rs  turn_router.rs
crates/storage/hc-store/: Cargo.toml
crates/storage/hc-store/src/: lib.rs  task_coordination.rs
crates/ui/hc-ui/: Cargo.toml
deploy/hc-api/: .env.example  docker-compose.yml
deploy/qwen25-32b-awq-vllm/: .env.example  docker-compose.yml
docs/: architecture.md  channel-conversation.md  conversation-runtime.md  core.md  implementation-plan-2w-4w.md  memory-architecture.md  memory-house.md  memory-prompt-unification.md  messages-stream-api.md  multi-agent-room.md  scheduled-tasks.md  storage-tiering.md  storage.md  tag-system-guide.md  task-driven-product.md  turn-pipeline.md  ui-workbench.md  working-rules.md
docs/adr/: ADR-001-task-routing-tier.md  ADR-002-planner-only-semantics.md  ADR-003-work-item-persistence-and-idempotency.md  ADR-004-conversation-task-room-scope.md  ADR-005-outward-speaker-and-artifact-schema.md  ADR-006-experience-lane-boundary.md  README.md
docs/todo/: room-routing-integration.md  swarm-p0-rollout.md  timed-and-scheduler-unification.md
mcp/: mcp-config.json
workspace/: README.md
workspace/indexes/: runtime-state.json
(+63 files in other folders)
