[workspace]
members = [
  "apps/hc",
  "apps/hc-context-cli",
  "apps/hc-llm-cli",
  "apps/hc-responder-cli",
  "crates/hc-agent",
  "crates/hc-capability",
  "crates/hc-claim",
  "crates/hc-context",
  "crates/hc-protocol",
  "crates/hc-core",
  "crates/hc-llm",
  "crates/hc-memory",
  "crates/hc-persona",
  "crates/hc-responder",
  "crates/hc-store",
  "crates/hc-trace",
  "crates/hc-ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
rust-version = "1.86"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
