[workspace]
members = [
  "apps/hc-api",
  "apps/hc-agent-cli",
  "apps/hc-cli",
  "crates/foundation/hc-behavior",
  "crates/foundation/hc-claim",
  "crates/foundation/hc-core",
  "crates/foundation/hc-intent",
  "crates/foundation/hc-protocol",
  "crates/foundation/hc-tag-system",
  "crates/storage/hc-bootstrap",
  "crates/storage/hc-store",
  "crates/agent/hc-agent",
  "crates/agent/hc-capability",
  "crates/agent/hc-context",
  "crates/agent/hc-conversation",
  "crates/agent/hc-memory",
  "crates/agent/hc-persona",
  "crates/agent/hc-responder",
  "crates/agent/hc-scheduler",
  "crates/agent/hc-skill",
  "crates/agent/hc-toolchain",
  "crates/integrations/hc-llm",
  "crates/integrations/hc-trace",
  "crates/runtime/hc-service",
  "crates/platform/hc-log",
  "crates/ui/hc-ui",
]
# 默认不编译可选桌面端（Slint），减轻日常全 workspace 构建；需要时：`cargo build -p hc-ui`
default-members = [
  "apps/hc-api",
  "apps/hc-agent-cli",
  "apps/hc-cli",
  "crates/foundation/hc-behavior",
  "crates/foundation/hc-claim",
  "crates/foundation/hc-core",
  "crates/foundation/hc-intent",
  "crates/foundation/hc-protocol",
  "crates/foundation/hc-tag-system",
  "crates/storage/hc-bootstrap",
  "crates/storage/hc-store",
  "crates/agent/hc-agent",
  "crates/agent/hc-capability",
  "crates/agent/hc-context",
  "crates/agent/hc-conversation",
  "crates/agent/hc-memory",
  "crates/agent/hc-persona",
  "crates/agent/hc-responder",
  "crates/agent/hc-scheduler",
  "crates/agent/hc-skill",
  "crates/agent/hc-toolchain",
  "crates/integrations/hc-llm",
  "crates/integrations/hc-trace",
  "crates/runtime/hc-service",
  "crates/platform/hc-log",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
rust-version = "1.88"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
rustyline = "14"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
notify = "6.1"
