[package]
name = "hc-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util = "0.3"
hc-protocol = { path = "../../crates/hc-protocol" }
hc-service = { path = "../../crates/hc-service" }
hc-conversation = { path = "../../crates/hc-conversation" }
hc-scheduler = { path = "../../crates/hc-scheduler" }
hc-store = { path = "../../crates/hc-store" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
