[package]
name = "hc-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
futures-util = "0.3"
hc-bootstrap = { path = "../../crates/hc-bootstrap" }
hc-protocol = { path = "../../crates/hc-protocol" }
hc-responder = { path = "../../crates/hc-responder" }
hc-service = { path = "../../crates/hc-service" }
hc-conversation = { path = "../../crates/hc-conversation" }
hc-scheduler = { path = "../../crates/hc-scheduler" }
hc-store = { path = "../../crates/hc-store" }
hc-memory = { path = "../../crates/hc-memory" }
hc-behavior = { path = "../../crates/hc-behavior" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tracing = "0.1.44"

[dev-dependencies]
hc-service = { path = "../../crates/hc-service" }
serde_json.workspace = true
tower = { version = "0.5", features = ["util"] }
