[package]
name = "hc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
rustyline.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
encoding_rs = "0.8"
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
hc-capability = { path = "../../crates/hc-capability" }
hc-agent = { path = "../../crates/hc-agent" }
hc-context = { path = "../../crates/hc-context" }
hc-llm = { path = "../../crates/hc-llm" }
hc-service = { path = "../../crates/hc-service" }
hc-skill = { path = "../../crates/hc-skill" }
hc-toolchain = { path = "../../crates/hc-toolchain" }
hc-intent = { path = "../../crates/hc-intent" }
hc-protocol = { path = "../../crates/hc-protocol" }
hc-tag-system = { path = "../../crates/hc-tag-system" }
tracing = "0.1.44"
