[package]
name = "hc-context-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
hc-context = { path = "../../crates/hc-context" }
hc-llm = { path = "../../crates/hc-llm" }
hc-memory = { path = "../../crates/hc-memory" }
hc-store = { path = "../../crates/hc-store" }
