[package]
name = "hc-tool-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
rustyline.workspace = true
serde.workspace = true
serde_json.workspace = true
hc-capability = { path = "../../crates/hc-capability" }
hc-agent = { path = "../../crates/hc-agent" }
hc-context = { path = "../../crates/hc-context" }
hc-llm = { path = "../../crates/hc-llm" }
hc-skill = { path = "../../crates/hc-skill" }
hc-store = { path = "../../crates/hc-store" }
hc-toolchain = { path = "../../crates/hc-toolchain" }
