[package]
name = "hc-tool-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
rustyline.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
encoding_rs = "0.8"
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
hc-capability = { path = "../../crates/hc-capability" }
hc-agent = { path = "../../crates/hc-agent" }
hc-conversation = { path = "../../crates/hc-conversation" }
hc-context = { path = "../../crates/hc-context" }
hc-llm = { path = "../../crates/hc-llm" }
hc-scheduler = { path = "../../crates/hc-scheduler" }
hc-service = { path = "../../crates/hc-service" }
hc-skill = { path = "../../crates/hc-skill" }
hc-store = { path = "../../crates/hc-store" }
hc-toolchain = { path = "../../crates/hc-toolchain" }
hc-protocol = { path = "../../crates/hc-protocol" }
