[package]
name = "hc-conversation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
hc-bootstrap = { path = "../hc-bootstrap" }
hc-store = { path = "../hc-store" }
serde.workspace = true
serde_json.workspace = true
