[package]
name = "hc-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
hc-store = { path = "../hc-store" }
hc-persona = { path = "../hc-persona" }
