[package]
name = "hc-service"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
hc-bootstrap = { path = "../hc-bootstrap" }
hc-agent = { path = "../hc-agent" }
hc-behavior = { path = "../hc-behavior" }
hc-capability = { path = "../hc-capability" }
hc-conversation = { path = "../hc-conversation" }
hc-context = { path = "../hc-context" }
hc-intent = { path = "../hc-intent" }
hc-llm = { path = "../hc-llm" }
hc-memory = { path = "../hc-memory" }
hc-protocol = { path = "../hc-protocol" }
hc-responder = { path = "../hc-responder" }
hc-scheduler = { path = "../hc-scheduler" }
hc-store = { path = "../hc-store" }
hc-toolchain = { path = "../hc-toolchain" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing = "0.1"
