[package]
name = "hc-tag-system"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
hc-bootstrap = { path = "../hc-bootstrap" }
hc-protocol = { path = "../hc-protocol" }
notify = "6.1"
tokio = { workspace = true, features = ["fs", "sync"] }