[package]
name = "hc-toolchain"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
hc-capability = { path = "../hc-capability" }
hc-store = { path = "../hc-store" }
