[package]
name = "hc-trace"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
hc-bootstrap = { path = "../hc-bootstrap" }
hc-responder = { path = "../hc-responder" }
hc-store = { path = "../hc-store" }
