[package]
name = "hc-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
hc-bootstrap = { path = "../../storage/hc-bootstrap" }
serde.workspace = true
serde_json.workspace = true
tracing = "0.1"
hc-core = { path = "../../foundation/hc-core" }
hc-capability = { path = "../hc-capability" }
hc-claim = { path = "../../foundation/hc-claim" }
hc-conversation = { path = "../hc-conversation" }
hc-context = { path = "../hc-context" }
hc-llm = { path = "../../integrations/hc-llm" }
hc-memory = { path = "../hc-memory" }
hc-persona = { path = "../hc-persona" }
hc-protocol = { path = "../../foundation/hc-protocol" }
hc-responder = { path = "../hc-responder" }
hc-store = { path = "../../storage/hc-store" }
hc-trace = { path = "../../integrations/hc-trace" }

[dev-dependencies]
tempfile = "3"
