[package]
name = "hc-context"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
hc-bootstrap = { path = "../hc-bootstrap" }
hc-llm = { path = "../hc-llm" }
hc-protocol = { path = "../hc-protocol" }
hc-capability = { path = "../hc-capability" }
hc-memory = { path = "../hc-memory" }
hc-persona = { path = "../hc-persona" }
hc-store = { path = "../hc-store" }
hc-toolchain = { path = "../hc-toolchain" }
hc-trace = { path = "../hc-trace" }
