[package]
name = "hc-responder"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
hc-bootstrap = { path = "../../storage/hc-bootstrap" }
hc-store = { path = "../../storage/hc-store" }

[dev-dependencies]
tempfile = "3"
