[package]
name = "hc-skill"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
hc-capability = { path = "../hc-capability" }
hc-store = { path = "../../storage/hc-store" }
hc-toolchain = { path = "../hc-toolchain" }
