[package]
name = "hc-trace"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
hc-bootstrap = { path = "../../storage/hc-bootstrap" }
hc-responder = { path = "../../agent/hc-responder" }
hc-store = { path = "../../storage/hc-store" }
