[package]
name = "hc-service"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
hc-bootstrap = { path = "../../storage/hc-bootstrap" }
hc-agent = { path = "../../agent/hc-agent" }
hc-behavior = { path = "../../foundation/hc-behavior" }
hc-capability = { path = "../../agent/hc-capability" }
hc-conversation = { path = "../../agent/hc-conversation" }
hc-context = { path = "../../agent/hc-context" }
hc-intent = { path = "../../foundation/hc-intent" }
hc-llm = { path = "../../integrations/hc-llm" }
hc-memory = { path = "../../agent/hc-memory" }
hc-protocol = { path = "../../foundation/hc-protocol" }
hc-responder = { path = "../../agent/hc-responder" }
hc-scheduler = { path = "../../agent/hc-scheduler" }
hc-store = { path = "../../storage/hc-store" }
hc-toolchain = { path = "../../agent/hc-toolchain" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing = "0.1"
