[package]
name = "hc-store"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
hc-bootstrap = { path = "../hc-bootstrap" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
hc-protocol = { path = "../../foundation/hc-protocol" }
