[package]
name = "hc-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
hc-agent = { path = "../hc-agent" }
hc-context = { path = "../hc-context" }
hc-core = { path = "../hc-core" }
hc-llm = { path = "../hc-llm" }
hc-protocol = { path = "../hc-protocol" }
hc-responder = { path = "../hc-responder" }
hc-service = { path = "../hc-service" }
hc-trace = { path = "../hc-trace" }
slint = "1.8"
tracing = "0.1.44"
