[package]
name = "hc-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
hc-agent = { path = "../../agent/hc-agent" }
hc-context = { path = "../../agent/hc-context" }
hc-core = { path = "../../foundation/hc-core" }
hc-llm = { path = "../../integrations/hc-llm" }
hc-protocol = { path = "../../foundation/hc-protocol" }
hc-responder = { path = "../../agent/hc-responder" }
hc-service = { path = "../../runtime/hc-service" }
hc-trace = { path = "../../integrations/hc-trace" }
slint = "1.8"
tracing = "0.1.44"
